Navbar fixe au dessus et scroll invisible

--- a/portfolio/src/styles.sass
+++ b/portfolio/src/styles.sass
@@ -8,6 +8,10 @@ html, body
 
 body
     background-size: 100% 100%
+    -ms-overflow-style: none
+    scrollbar-width: none
+    &::-webkit-scrollbar
+        display: none
     &.aqua
         background-image: linear-gradient(10deg, #0071BC, #00A99D)
     &.pyro
